--- a/covid19-prefeitura-rio-de-janeiro.ipynb
+++ b/covid19-prefeitura-rio-de-janeiro.ipynb
@@ -14318,7 +14318,7 @@
     "              x=df_semana.index, \n",
     "                  y=[\"obito\",\"ativo\",\"recuperado\",\"total\"],\n",
     "              line_shape=\"spline\",\n",
-    "              title='Casos diário' )\n",
+    "              title='Situação semanal' )\n",
     "fig.show()\n",
     "fig.write_html(os.path.join(save_path, 'status-semanal.html'))"
    ]
