--- a/covid19-prefeitura-rio-de-janeiro.ipynb
+++ b/covid19-prefeitura-rio-de-janeiro.ipynb
@@ -2,7 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install pandas\n",
+    "#!pip install plotly\n",
+    "#!pip install matplotlib\n",
+    "#!pip install unidecode\n",
+    "#!pip install urllib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +115,6 @@
     "from plotly.subplots import make_subplots\n",
     "from unidecode import unidecode\n",
     "\n",
-    "import matplotlib.animation as animation\n",
     "from IPython.display import display, HTML, display_html\n",
     "\n",
     "pyo.init_notebook_mode()\n",
@@ -113,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('populacao_rj.xls', <http.client.HTTPMessage at 0x133d13ca0f0>)"
+       "('populacao_rj.xls', <http.client.HTTPMessage at 0x1defa00dda0>)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,23 +216,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('covid19_rj.csv', <http.client.HTTPMessage at 0x133d14be358>)"
+       "('covid19_rj.csv', <http.client.HTTPMessage at 0x1defa0f01d0>)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Dataset covid-19 da cidade do Rio de Janeiro - fonte: Data.rio\n",
-    "remote_file_name = \"https://pcrj.maps.arcgis.com/sharing/rest/content/items/754cc0698129404ba8bfb053cbdbd158/data\"\n",
     "remote_file_name = \"http://pcrj.maps.arcgis.com/sharing/rest/content/items/ae85fc84a9b244108d96c7072be4d3d3/data\"\n",
     "covid_file = os.path.join(\"covid19_rj.csv\")\n",
     "urllib.request.urlretrieve(remote_file_name, covid_file) "
@@ -228,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -294,78 +305,78 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>184288</th>\n",
+       "      <th>190322</th>\n",
        "      <td>CONFIRMADO</td>\n",
-       "      <td>01/04/21</td>\n",
-       "      <td>12/29/20</td>\n",
-       "      <td>BARRA DA TIJUCA</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>02/02/21</td>\n",
+       "      <td>01/23/21</td>\n",
+       "      <td>VILA ISABEL</td>\n",
+       "      <td>2.2</td>\n",
        "      <td>F</td>\n",
+       "      <td>De 60 a 69</td>\n",
+       "      <td>ATIVO</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Branca</td>\n",
+       "      <td>02/03/21</td>\n",
+       "      <td>ESUS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190323</th>\n",
+       "      <td>CONFIRMADO</td>\n",
+       "      <td>02/02/21</td>\n",
+       "      <td>01/16/21</td>\n",
+       "      <td>RECREIO DOS BANDEIRANTES</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>M</td>\n",
        "      <td>De 30 a 39</td>\n",
        "      <td>RECUPERADO</td>\n",
-       "      <td>01/12/21</td>\n",
+       "      <td>01/30/21</td>\n",
        "      <td>Ignorado</td>\n",
-       "      <td>01/23/21</td>\n",
+       "      <td>02/03/21</td>\n",
        "      <td>ESUS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>184289</th>\n",
+       "      <th>190324</th>\n",
        "      <td>CONFIRMADO</td>\n",
-       "      <td>01/04/21</td>\n",
-       "      <td>12/29/20</td>\n",
-       "      <td>BARRA DA TIJUCA</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>02/02/21</td>\n",
+       "      <td>12/08/20</td>\n",
+       "      <td>VILA ISABEL</td>\n",
+       "      <td>2.2</td>\n",
        "      <td>M</td>\n",
-       "      <td>De 90 a 99</td>\n",
+       "      <td>De 30 a 39</td>\n",
        "      <td>RECUPERADO</td>\n",
-       "      <td>01/12/21</td>\n",
-       "      <td>Ignorado</td>\n",
-       "      <td>01/23/21</td>\n",
+       "      <td>12/22/20</td>\n",
+       "      <td>Branca</td>\n",
+       "      <td>02/03/21</td>\n",
        "      <td>ESUS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>184290</th>\n",
+       "      <th>190325</th>\n",
        "      <td>CONFIRMADO</td>\n",
-       "      <td>01/22/21</td>\n",
-       "      <td>01/16/21</td>\n",
-       "      <td>VIGARIO GERAL</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>M</td>\n",
-       "      <td>De 30 a 39</td>\n",
-       "      <td>ATIVO</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Preta</td>\n",
-       "      <td>01/23/21</td>\n",
-       "      <td>ESUS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>184291</th>\n",
-       "      <td>CONFIRMADO</td>\n",
-       "      <td>01/22/21</td>\n",
-       "      <td>01/21/21</td>\n",
-       "      <td>BRAS DE PINA</td>\n",
-       "      <td>3.1</td>\n",
+       "      <td>01/19/21</td>\n",
+       "      <td>01/17/21</td>\n",
+       "      <td>CENTRO</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>F</td>\n",
-       "      <td>De 50 a 59</td>\n",
-       "      <td>ATIVO</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Parda</td>\n",
-       "      <td>01/23/21</td>\n",
+       "      <td>De 40 a 49</td>\n",
+       "      <td>RECUPERADO</td>\n",
+       "      <td>01/31/21</td>\n",
+       "      <td>Branca</td>\n",
+       "      <td>02/03/21</td>\n",
        "      <td>ESUS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>184292</th>\n",
+       "      <th>190326</th>\n",
        "      <td>CONFIRMADO</td>\n",
-       "      <td>01/22/21</td>\n",
-       "      <td>01/16/21</td>\n",
-       "      <td>BRAS DE PINA</td>\n",
-       "      <td>3.1</td>\n",
+       "      <td>01/12/21</td>\n",
+       "      <td>01/10/21</td>\n",
+       "      <td>JARDIM BOTANICO</td>\n",
+       "      <td>2.1</td>\n",
        "      <td>M</td>\n",
-       "      <td>De 30 a 39</td>\n",
-       "      <td>ATIVO</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Parda</td>\n",
-       "      <td>01/23/21</td>\n",
+       "      <td>De 0 a 9</td>\n",
+       "      <td>RECUPERADO</td>\n",
+       "      <td>01/24/21</td>\n",
+       "      <td>Branca</td>\n",
+       "      <td>02/03/21</td>\n",
        "      <td>ESUS</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -373,29 +384,29 @@
        "</div>"
       ],
       "text/plain": [
-       "       classificação_final dt_notific dt_inicio_sintomas bairro_resid_estadia  \\\n",
-       "184288          CONFIRMADO   01/04/21           12/29/20      BARRA DA TIJUCA   \n",
-       "184289          CONFIRMADO   01/04/21           12/29/20      BARRA DA TIJUCA   \n",
-       "184290          CONFIRMADO   01/22/21           01/16/21        VIGARIO GERAL   \n",
-       "184291          CONFIRMADO   01/22/21           01/21/21         BRAS DE PINA   \n",
-       "184292          CONFIRMADO   01/22/21           01/16/21         BRAS DE PINA   \n",
+       "       classificação_final dt_notific dt_inicio_sintomas  \\\n",
+       "190322          CONFIRMADO   02/02/21           01/23/21   \n",
+       "190323          CONFIRMADO   02/02/21           01/16/21   \n",
+       "190324          CONFIRMADO   02/02/21           12/08/20   \n",
+       "190325          CONFIRMADO   01/19/21           01/17/21   \n",
+       "190326          CONFIRMADO   01/12/21           01/10/21   \n",
        "\n",
-       "       ap_residencia_estadia sexo faixa_etaria    evolucao dt_evolucao  \\\n",
-       "184288                   4.0    F   De 30 a 39  RECUPERADO    01/12/21   \n",
-       "184289                   4.0    M   De 90 a 99  RECUPERADO    01/12/21   \n",
-       "184290                   3.1    M   De 30 a 39       ATIVO         NaN   \n",
-       "184291                   3.1    F   De 50 a 59       ATIVO         NaN   \n",
-       "184292                   3.1    M   De 30 a 39       ATIVO         NaN   \n",
+       "            bairro_resid_estadia ap_residencia_estadia sexo faixa_etaria  \\\n",
+       "190322               VILA ISABEL                   2.2    F   De 60 a 69   \n",
+       "190323  RECREIO DOS BANDEIRANTES                   4.0    M   De 30 a 39   \n",
+       "190324               VILA ISABEL                   2.2    M   De 30 a 39   \n",
+       "190325                    CENTRO                   1.0    F   De 40 a 49   \n",
+       "190326           JARDIM BOTANICO                   2.1    M     De 0 a 9   \n",
        "\n",
-       "        raca_cor Data_atualizacao sistema  \n",
-       "184288  Ignorado         01/23/21    ESUS  \n",
-       "184289  Ignorado         01/23/21    ESUS  \n",
-       "184290     Preta         01/23/21    ESUS  \n",
-       "184291     Parda         01/23/21    ESUS  \n",
-       "184292     Parda         01/23/21    ESUS  "
+       "          evolucao dt_evolucao  raca_cor Data_atualizacao sistema  \n",
+       "190322       ATIVO         NaN    Branca         02/03/21    ESUS  \n",
+       "190323  RECUPERADO    01/30/21  Ignorado         02/03/21    ESUS  \n",
+       "190324  RECUPERADO    12/22/20    Branca         02/03/21    ESUS  \n",
+       "190325  RECUPERADO    01/31/21    Branca         02/03/21    ESUS  \n",
+       "190326  RECUPERADO    01/24/21    Branca         02/03/21    ESUS  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,14 +417,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(184293, 12) (162, 3)\n"
+      "(190327, 12) (162, 3)\n"
      ]
     }
    ],
@@ -423,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -442,24 +453,24 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 184293 entries, 0 to 184292\n",
+      "RangeIndex: 190327 entries, 0 to 190326\n",
       "Data columns (total 12 columns):\n",
       " #   Column                 Non-Null Count   Dtype \n",
       "---  ------                 --------------   ----- \n",
-      " 0   classificação_final    184293 non-null  object\n",
-      " 1   dt_notific             184263 non-null  object\n",
-      " 2   dt_inicio_sintomas     184125 non-null  object\n",
-      " 3   bairro_resid_estadia   184293 non-null  object\n",
-      " 4   ap_residencia_estadia  184293 non-null  object\n",
-      " 5   sexo                   184293 non-null  object\n",
-      " 6   faixa_etaria           184293 non-null  object\n",
-      " 7   evolucao               184293 non-null  object\n",
-      " 8   dt_evolucao            173084 non-null  object\n",
-      " 9   raca_cor               184293 non-null  object\n",
-      " 10  Data_atualizacao       184293 non-null  object\n",
-      " 11  sistema                184293 non-null  object\n",
+      " 0   classificação_final    190327 non-null  object\n",
+      " 1   dt_notific             190290 non-null  object\n",
+      " 2   dt_inicio_sintomas     190215 non-null  object\n",
+      " 3   bairro_resid_estadia   190327 non-null  object\n",
+      " 4   ap_residencia_estadia  190327 non-null  object\n",
+      " 5   sexo                   190327 non-null  object\n",
+      " 6   faixa_etaria           190327 non-null  object\n",
+      " 7   evolucao               190327 non-null  object\n",
+      " 8   dt_evolucao            179378 non-null  object\n",
+      " 9   raca_cor               190327 non-null  object\n",
+      " 10  Data_atualizacao       190327 non-null  object\n",
+      " 11  sistema                190327 non-null  object\n",
       "dtypes: object(12)\n",
-      "memory usage: 16.9+ MB\n"
+      "memory usage: 17.4+ MB\n"
      ]
     }
    ],
@@ -15138,13 +15149,6 @@
     "fig.show()\n",
     "fig.write_html(os.path.join(save_path, 'status-semanal.html'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
